--- a/current-idea/style/main-stylesheet.css
+++ b/current-idea/style/main-stylesheet.css
@@ -3,6 +3,9 @@ body {
   color: #343740;
   font-family: "Inter", sans-serif;
 }
+
+/* headings */
+
 h1 {
   margin-bottom: 0.5em;
   font-family: "Inter", sans-serif;
@@ -29,6 +32,8 @@ h2 {
   font-style: oblique;
 }
 
+/* other text */
+
 p {
   font-size: 90%;
   font-optical-sizing: auto;
@@ -47,13 +52,14 @@ li {
   font-style: normal;
 }
 
+/* other elements */
+
 nav {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   border-bottom: #959292 1px solid;
   padding: 0px;
-  background-color: #016d66;
 }
 
 nav > button {
@@ -64,21 +70,24 @@ nav > button {
   padding: 10px 5px;
   width: 100%;
   border: none;
-  background-color: inherit;
   border-right: 1px solid #959292;
   border-left: #959292 1px solid;
+  background-color: #00877e;
 }
 
 nav > button:hover {
   background-color: #00a499;
-  font-style: bold;
+  font-weight: bold;
 }
 
 button a {
   text-decoration: none;
-  color: inherit;
+  font-weight: bolder;
+  color: whitesmoke;
   text-transform: uppercase;
 }
+
+/* images */
 
 .album {
   display: inline-flex;
