--- a/current-idea/style/main-stylesheet.css
+++ b/current-idea/style/main-stylesheet.css
@@ -1,7 +1,54 @@
+/* basic elements */
+
 body {
   background-color: #f0f0f0;
   color: #343740;
   font-family: "Inter", sans-serif;
+  display: flex;
+  flex-direction: column;
+  max-width: 100%;
+}
+
+section {
+  margin: 0% 5%;
+  display: flex;
+  flex-direction: inherit;
+  align-content: center;
+}
+
+/* navigation */
+
+nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  border-bottom: #959292 1px solid;
+  padding: 0px;
+}
+
+nav > button {
+  font-family: "Inter", sans-serif;
+  font-weight: 300;
+  text-decoration: none;
+  text-align: center;
+  padding: 10px 5px;
+  width: 100%;
+  border: none;
+  border-right: 1px solid #959292;
+  border-left: #959292 1px solid;
+  background-color: #00877e;
+}
+
+nav > button:hover {
+  background-color: #00a499;
+  font-weight: bold;
+}
+
+nav > button a {
+  text-decoration: none;
+  font-weight: bolder;
+  color: whitesmoke;
+  text-transform: uppercase;
 }
 
 /* headings */
@@ -50,41 +97,6 @@ li {
   margin-bottom: 0.25em;
   font-weight: 300;
   font-style: normal;
-}
-
-/* other elements */
-
-nav {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  border-bottom: #959292 1px solid;
-  padding: 0px;
-}
-
-nav > button {
-  font-family: "Inter", sans-serif;
-  font-weight: 300;
-  text-decoration: none;
-  text-align: center;
-  padding: 10px 5px;
-  width: 100%;
-  border: none;
-  border-right: 1px solid #959292;
-  border-left: #959292 1px solid;
-  background-color: #00877e;
-}
-
-nav > button:hover {
-  background-color: #00a499;
-  font-weight: bold;
-}
-
-button a {
-  text-decoration: none;
-  font-weight: bolder;
-  color: whitesmoke;
-  text-transform: uppercase;
 }
 
 /* images */
