--- a/style/main-stylesheet.css
+++ b/style/main-stylesheet.css
@@ -1,9 +1,12 @@
 /* basic elements */
 
-body {
-  background-color: #f0f0f0;
-  color: #343740;
+* {
   font-family: "Inter", sans-serif;
+}
+
+body {
+  background-color: #ffffff;
+  color: #343740;
   display: flex;
   flex-direction: column;
   max-width: 100%;
@@ -35,29 +38,23 @@ nav {
   padding: 0px;
 }
 
-nav > button {
-  font-family: "Inter", sans-serif;
-  font-weight: 300;
+nav a {
+  font-size: small;
   text-decoration: none;
   text-align: center;
-  padding: 10px 5px;
+  align-content: center;
+  padding: 10px 15px;
   width: 100%;
-  border: none;
   border-right: 1px solid #959292;
-  border-left: #959292 1px solid;
+  border-left: 1px solid #959292;
   background-color: #00877e;
-}
-
-nav > button:hover {
-  background-color: #00a499;
-  font-weight: bold;
-}
-
-nav > button a {
-  text-decoration: none;
-  font-weight: bolder;
   color: whitesmoke;
   text-transform: uppercase;
+}
+
+nav a:hover {
+  opacity: 0.7;
+  transition: opacity 0.2s ease-in-out;
 }
 
 /* headings */
