--- a/style/main-stylesheet.css
+++ b/style/main-stylesheet.css
@@ -42,7 +42,7 @@ nav {
   padding: 0px;
 }
 
-nav a {
+nav button {
   font-size: small;
   text-decoration: none;
   text-align: center;
@@ -51,12 +51,14 @@ nav a {
   width: 100%;
   border-right: 1px solid #ffffff;
   border-left: 1px solid #ffffff;
+  border-top: none;
+  border-bottom: none;
   background-color: #00877e;
   color: whitesmoke;
   text-transform: uppercase;
 }
 
-nav a:hover {
+nav button:hover {
   opacity: 0.7;
   transition: opacity 0.2s ease-in-out;
 }
