--- a/style/main-stylesheet.css
+++ b/style/main-stylesheet.css
@@ -17,10 +17,12 @@ body {
 }
 
 section {
-  margin: 0% 5%;
   display: flex;
   flex-direction: inherit;
+  max-width: 1248px;
   align-content: center;
+  justify-content: center;
+  margin: auto;
 }
 
 footer {
