--- a/style/main-stylesheet.css
+++ b/style/main-stylesheet.css
@@ -44,7 +44,8 @@ nav {
   padding: 0px;
 }
 
-nav button {
+nav button,
+a {
   font-size: small;
   text-decoration: none;
   text-align: center;
@@ -60,7 +61,8 @@ nav button {
   text-transform: uppercase;
 }
 
-nav button:hover {
+nav button:hover,
+a:hover {
   opacity: 0.7;
   transition: opacity 0.2s ease-in-out;
 }
