--- a/style/main-stylesheet.css
+++ b/style/main-stylesheet.css
@@ -15,6 +15,13 @@ a {
   color: #00312d;
 }
 
+link:checked {
+  background-color: #00312d;
+}
+.active-button {
+  background-color: #00312d;
+}
+
 body {
   background-color: #ede7e3;
   color: #242526;
