all pages with Jekyll layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="pl">
   <head>
     {% include head-tag.html %}
   </head>
   <body>
     {% include GTM-in-body.html %}
     <header>{% include header.html %}</header>
-    {{ content }}
+    <section id="main">{{ content }}</section>
   </body>
   <footer>{% include footer.html %}</footer>
 </html>
