duplicated footer fix

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,13 @@
 <!-- start of footer.html-->
-<p>
-  2025 @ amk
-  <br />
-  Tworzę tę stronę w ramach nauki web developmentu (i przy okazji wyładowania
-  frustracji związanej z zakupem mieszkania). Znajdziesz ją też na moim
-  <a href="https://github.com/annopodobna" target="_blank">GitHubie</a>. Nie
-  odpowiadam za błędne decyzje życiowe, które podejmiesz na podstawie
-  zamieszczonych tu treści.
-</p>
+<footer>
+  <p>
+    2025 @ amk
+    <br />
+    Tworzę tę stronę w ramach nauki web developmentu (i przy okazji wyładowania
+    frustracji związanej z zakupem mieszkania). Znajdziesz ją też na moim
+    <a href="https://github.com/annopodobna" target="_blank">GitHubie</a>. Nie
+    odpowiadam za błędne decyzje życiowe, które podejmiesz na podstawie
+    zamieszczonych tu treści.
+  </p>
+</footer>
 <!-- end of footer.html-->
