--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,5 +8,5 @@
     <header>{% include header.html %}</header>
     <section id="main">{{ content }}</section>
   </body>
-  <footer>{% include footer.html %}</footer>
+  {% include footer.html %}
 </html>
