nav bez js? tylko changeColor

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <!-- start of header.html-->
 <nav>
-  <a id="logo" onclick="goHome(event)" href="/"
+  <a id="logo" onclick="changeColor(event)" href="/"
     ><img src="/media/favicon-32x32.ico" />
     <!--
           <svg
@@ -148,17 +148,17 @@
             MieszkAnka - by AMK
           </svg> -->
   </a>
-  <a onclick="onMenuClick(event)" href="/sprawy-koncepcyjne"
+  <a onclick="changeColor(event)" href="/sprawy-koncepcyjne"
     >Sprawy koncepcyjne
   </a>
-  <a onclick="onMenuClick(event)" href="/sprawy-papierkowe"
+  <a onclick="changeColor(event)" href="/sprawy-papierkowe"
     >Sprawy papierkowe
   </a>
-  <a onclick="onMenuClick(event)" href="/sprawy-projektowe"
+  <a onclick="changeColor(event)" href="/sprawy-projektowe"
     >Sprawy projektowe
   </a>
-  <a onclick="onMenuClick(event)" href="/sprawy-budowlane">Sprawy budowlane </a>
-  <a onclick="onMenuClick(event)" href="/dziennik-budowy">Dziennik budowy </a>
+  <a onclick="changeColor(event)" href="/sprawy-budowlane">Sprawy budowlane </a>
+  <a onclick="changeColor(event)" href="/dziennik-budowy">Dziennik budowy </a>
   <!-- <a onclick="onMenuClick(event)" href="/kalkulator">Kalkulator </a> -->
 </nav>
 <!-- end of header.html-->
